[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "lumache"
authors = [{name = "Graziella", email="graziella@lumache.com"}]
dynamic = ["version", "description"]

[project.optional-dependencies]
doc = [
    "sphinx",
    "myst-parser",
    "sphinx-material"
]